Scraper working, can scrape item details or individual sticker prices, can combine them, can scrape a list of pages

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
-- Get prices for all the stickers an item has
-- ???Trying to ommit the login popup (there is 
-captcha and mobile code authentication, not sure if possible)
--
+- clean the code a bit(see why one of the imported functions breaks everything) - done
+- combine prices with item stickers - done
+- change variable names
 -
